--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "superjson": "1.12.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
+    "usehooks-ts": "^2.9.1",
     "zod": "^3.21.4",
     "zustand": "^4.3.8"
   },
